# FindDeckLinkSDK.cmake

./: .gitignore  LICENSE  README.md
Example/: CMakeLists.txt  README.txt
